# fablegen

./: .gitignore  DECISIONS.md  LICENSE  README.md  SENTINEL.md  pyproject.toml
.github/workflows/: ci.yml
claude_code/: INSTALL.md
claude_code/commands/: fable-gen.md
docs/: CHANGELOG-profiles.md  model-prompting-guide.md
examples/: claude-design.md  example_build_saas.md  example_research.md  fable-5.md  gpt-5.5-instant.md  opus-4.8.md  sonnet-5.md
fablegen/: __init__.py  api.py  cli.py  config.py  generator.py  interview.py  models.py  profiles.py  refine.py  skills.py
fablegen/profiles/: claude-design.json  codex.json  fable-5.json  gemini-3.json  gpt-5.5-instant.json  gpt-5.6.json  grok-4.json  local.json  opus-4.8.json  sonnet-5.json
fablegen/templates/: master.md  skills.json
scripts/: README.md  apply_profiles.py  com.fablegen.weekly-refresh.plist  model-research.workflow.js  weekly-refresh-reminder.sh
tests/: test_cli.py  test_generator.py  test_models.py  test_profiles.py
