[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fablegen"
version = "0.1.0"
description = "A master-prompt generator for Claude Fable 5 — lean prompts with goal, loop, and skill scaffolding."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["prompt-engineering", "claude", "fable-5", "llm", "cli", "agents"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
]
dependencies = []  # standard library only — clone and run

[project.urls]
Homepage = "https://github.com/your-username/fablegen"

[project.scripts]
fablegen = "fablegen.cli:main"

[tool.setuptools]
packages = ["fablegen"]

[tool.setuptools.package-data]
fablegen = ["templates/*.md", "templates/*.json"]
