[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fablegen"
version = "0.3.0"
description = "A multi-model master-prompt generator with auto model-detection — lean prompts with discovery, goal, loop, skills, and a final check, tuned per model."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["prompt-engineering", "claude", "fable-5", "llm", "cli", "agents"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
]
dependencies = []  # standard library only — clone and run

[project.urls]
Homepage = "https://github.com/your-username/fablegen"

[project.scripts]
fablegen = "fablegen.cli:main"

[tool.setuptools]
packages = ["fablegen"]

[tool.setuptools.package-data]
fablegen = ["templates/*.md", "templates/*.json", "profiles/*.json"]
